--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
+    "plyr-react": "^5.3.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
