--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^16.0.7",
     "plyr-react": "^5.3.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
